# allens-algebra

./: README.md  requirements.txt  setup.cfg
allens_algebra/: __init__.py  allens_algebra.py
